// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultList renders the container 1`] = `
<div
  style={
    Object {
      "background": "white",
      "height": "100%",
      "overflowY": "scroll",
      "width": "100%",
    }
  }
/>
`;

exports[`ResultList renders the container with custom styles 1`] = `
<div
  style={
    Object {
      "background": "white",
      "height": 200,
      "overflowY": "scroll",
      "width": "100%",
    }
  }
/>
`;

exports[`ResultList renders the loading indicator 1`] = `
<div
  style={
    Object {
      "background": "white",
      "height": "100%",
      "overflowY": "scroll",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "marginTop": 50,
        "textAlign": "center",
      }
    }
  >
    Results loading
  </div>
</div>
`;
